[fix] Scrollbars shift content scrollbars all over the application (#1687)
* [fix] Hide scrollbar from Sidebar, Controls and Tabs

* [fix] Images list caption overlap by scrollbar

* [fix] Hide horizontal scrollbar in DataList component

* [fix] Single run overview tab scrollbar position

* [fix] Tags content scrolling

* [fix] Popovers content scrolling in case of long labels

* [fix] Hide scrollbar in CodeBlock component

* [fix] Table select boxes wasn't aligned correctly

--- a/aim/web/ui/src/components/kit/DataList/DataList.scss
+++ b/aim/web/ui/src/components/kit/DataList/DataList.scss
@@ -13,6 +13,14 @@
     border-radius: $border-radius-md;
     overflow: hidden;
     width: 100%;
+    .BaseTable__body {
+      & > div {
+        width: 100% !important;
+        .BaseTable__row {
+          width: 100% !important;
+        }
+      }
+    }
   }
   .BaseTable {
     &__table-main {
