--- a/aim/web/ui/src/styles/abstracts/_variables.scss
+++ b/aim/web/ui/src/styles/abstracts/_variables.scss
@@ -148,3 +148,4 @@ $breakpoints: (
   xxl: $xxl,
 );
 $run-overview-sidebar-width: 20rem;
+$container-max-width-without-paddings: 86.75rem;
